[build-system]
requires = ["setuptools>=75.3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codified"
version = "0.0.1"
dependencies = [
    "llama-index-core >=0.12.36",
    "mypy >=1.15.0", 
    "requests >=2.32.3",
    "types-requests"
]

[tool.mypy]
strict = true
disallow_untyped_defs = true
exclude = [".venv", ".devbox"]
